# AgenticAI-DataEngineering

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  databricks.yml  pyproject.toml  requirements.txt
.azure-pipelines/: cd-pipeline.yaml  ci-pipeline.yaml
.azuredevops/: pull_request_template.md
configs/ml/: ml_config.yaml
configs/quality/: bronze_dq_config.yaml  gold_dq_config.yaml  silver_dq_config.yaml
configs/sources/: azure_sql_source.yaml  eventhub_source.yaml  file_source.yaml  rest_api_source.yaml  sap_odata_source.yaml
docs/: 01_architecture_design.md  02_data_models_quality_security.md  04_runbook_operational_guidelines.md
infra/terraform/: main.tf  variables.tf
scripts/: seed_local.py
src/agents/: __init__.py  dq_remediation_agent.py  gdpr_rtbf_agent.py  nl_to_sql_agent.py  orchestrator_agent.py
src/api/: gold_api.py
src/cleaning/: bronze_to_silver.py  cleaning_utils.py  quarantine_handler.py
src/dlt/: bronze_to_silver_dlt.py  silver_to_gold_dlt.py
src/governance/: column_encryption.py  data_masking.py  delta_sharing.py  row_level_security.py  unity_catalog_setup.py
src/ingestion/batch/: autoloader_ingestion.py  sql_ingestion.py
src/ingestion/cdc/: __init__.py  debezium_cdc_ingestion.py
src/ingestion/cdf/: __init__.py  cdf_propagation.py
src/ingestion/metadata/: metadata_logger.py
src/ingestion/odata/: odata_ingestion.py
src/ingestion/rest/: __init__.py  rest_api_ingestion.py
src/ingestion/streaming/: eventhub_streaming.py
src/lineage/: openlineage_emitter.py
src/ml/: __init__.py  batch_inference.py  feature_engineering.py  model_drift_monitor.py  model_training.py
src/monitoring/: __init__.py  lakehouse_monitor.py
src/quality/: alerting.py  dq_checks.py
src/transformation/: silver_to_gold.py
src/utils/: __init__.py  config.py  dbutils_shim.py  logger.py
tests/integration/: conftest.py  synthetic_data.py  test_bronze_to_silver.py  test_dq_checks.py  test_silver_to_gold.py
tests/unit/: test_cleaning_utils.py  test_dq_checks.py
